WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257651
Safari may crash when tapping on video after returning to full screen from PiP
https://bugs.webkit.org/show_bug.cgi?id=257651
Summary
Safari may crash when tapping on video after returning to full screen from PiP
Jean-Yves Avenard [:jya]
Reported
2023-06-02 09:50:58 PDT
1. Open Safari app 2. Go to YouTube.com 3. Play any video 4. Tap [ ] at bottom right corner of video to watch in full screen 5. Swipe up from bottom of screen to transition to Home Screen (video moves full screen >> PiP window) 6. Tap on button at top right to move video back to full screen 7. Tap on the video anywhere Results: Safari crashes
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2023-06-02 09:51:16 PDT
rdar://109845717
Jean-Yves Avenard [:jya]
Comment 2
2023-06-02 09:59:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14632
EWS
Comment 3
2023-06-05 17:22:27 PDT
Committed
264880@main
(369109ea28ce): <
https://commits.webkit.org/264880@main
> Reviewed commits have been landed. Closing PR #14632 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug